# mllm

./: README_pdfusion.md
examples/qwen3_qnn_aot/: CMakeLists.txt  aot_run.cpp  build_context_pd.cpp  compile.cpp  modeling_qwen_qnn_aot.hpp  pd_compile.cpp  pd_run.cpp  qnn_aot_cfg_pd.json
mllm/backends/qnn/: CustomLayers.cpp  CustomLayers.hpp  QNNBackend.cpp  QNNBackend.hpp  QNNUtils.cpp  Register.cpp
mllm/backends/qnn/aot/: QnnWrappersAPI.cpp
mllm/backends/qnn/aot/passes/: AOTPipeline.cpp  LLM2QnnLoweringPass.cpp  LLMQuantRecipePass.cpp  LLMQuantRecipePass.hpp  PDFusionPass.cpp  PDFusionPass.hpp
mllm/backends/qnn/aot/visitor/: Customized.cpp  Customized.hpp
mllm/backends/qnn/aot_rt/: KVCacheManager.cpp  KVCacheManager.hpp  PDFusionRunner.cpp  PDFusionRunner.hpp  PDFusionScheduler.cpp  PDFusionScheduler.hpp  PromptProcessor.cpp  QnnAOTConfig.hpp  QnnAOTModule.cpp  README.md  TokenGenerator.cpp
mllm/backends/qnn/custom-op-package/LLaMAPackage/config/: LLaMAOpPackageHtp.xml
mllm/backends/qnn/custom-op-package/LLaMAPackage/src/: LLaMAPackageInterface.cpp
mllm/backends/qnn/custom-op-package/LLaMAPackage/src/ops/: FusedPDAttention.cpp  PDKVCacheUpdate.cpp
